# mod_cpp

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: codeql.yml
